<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="degree_apps_title">My Nanodegree Apps!</string>
    <string name="popular_movies_title">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="go_obiquitous">GO OBIQUITOUS</string>
    <string name="capstone">CAPSTONE</string>
</resources>
