<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grey"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:padding="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree_apps_title"
        android:id="@+id/title_text_view"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_popular_movies"
        android:text="@string/popular_movies_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/title_text_view"
        android:layout_alignStart="@+id/title_text_view"
        android:layout_alignEnd="@+id/title_text_view"
        android:background="@color/udacity_black" />

    <Button
        android:id="@+id/stock_hawk_button"
        android:text="@string/stock_hawk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/udacity_black"
        android:layout_below="@+id/button_popular_movies"
        android:layout_alignStart="@+id/button_popular_movies"
        android:layout_alignEnd="@id/button_popular_movies"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/built_it_bigger_button"
        android:text="@string/build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/udacity_black"
        android:layout_below="@+id/stock_hawk_button"
        android:layout_alignStart="@+id/button_popular_movies"
        android:layout_alignEnd="@id/button_popular_movies"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/make_your_app_material_button"
        android:text="@string/make_your_app_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/udacity_black"
        android:layout_below="@+id/built_it_bigger_button"
        android:layout_alignStart="@+id/button_popular_movies"
        android:layout_alignEnd="@id/button_popular_movies"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/go_obiquitous_button"
        android:text="@string/go_obiquitous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/udacity_black"
        android:layout_below="@+id/make_your_app_material_button"
        android:layout_alignStart="@+id/button_popular_movies"
        android:layout_alignEnd="@id/button_popular_movies"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/capstone_button"
        android:text="@string/capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/udacity_black"
        android:layout_below="@+id/go_obiquitous_button"
        android:layout_alignStart="@+id/button_popular_movies"
        android:layout_alignEnd="@id/button_popular_movies"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
